--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <h1>Sistema de Ventilación Automatizado</h1>
         <div class="subtitle">Detector de CO2 y control inteligente de ventanas</div>
         <div class="integrantes">
-            <p>Materia: Laboratorio de Hardware | Curso: 5°C | Escuela: Instituto Privado El Obraje | Año: 2024</p>
+            <p> Laboratorio de Hardware | 5°C | Instituto Privado El Obraje | 2025</p>
             <p>Integrantes: Romina Vazquez, Lautaro Ramirez, Joaquin Decara, Juan Bel</p>
         </div>
     </header>
@@ -132,7 +132,7 @@
             <h2>Lista de Materiales</h2>
             <ul class="bom-list">
                 <li><i class="fas fa-microchip"></i> Arduino Uno R3</li>
-                <li><i class="fas fa-wind"></i> Sensor de Gas MQ-135</li>
+                <li><i class="fas fa-wind"></i> Sensor de Gas MQ-7</li>
                 <li><i class="fas fa-robot"></i> Servomotor SG90</li>
                 <li><i class="fas fa-volume-up"></i> Piezo Buzzer</li>
                 <li><i class="fas fa-lightbulb" style="color:red;"></i> LED Rojo</li>
@@ -145,7 +145,7 @@
             <h2>Esquema de Conexiones</h2>
             <p>Conexión de pines:</p>
             <ul>
-                <li>Sensor MQ-135 → A0</li>
+                <li>Sensor MQ-7 → A0</li>
                 <li>Servomotor → D2</li>
                 <li>Zumbador → D7</li>
                 <li>LED Amarillo → D12</li>
@@ -212,7 +212,7 @@ void loop(){
     </main>
 
     <footer>
-        <p>Proyecto Final - Laboratorio de Hardware 2024 - Instituto Privado El Obraje</p>
+        <p>Proyecto Final - Laboratorio de Hardware 2025 - Instituto Privado El Obraje</p>
     </footer>
 </body>
 </html>
